fix(compare): adjust table holder to prevent unwanted 1px horizontal scrolling

--- a/src/app/components/server-compare-charts/server-compare-charts.component.scss
+++ b/src/app/components/server-compare-charts/server-compare-charts.component.scss
@@ -13,7 +13,7 @@
     tr {
       th:nth-of-type(1) {
         position: sticky;
-        left: -1px;
+        left: 0;
         z-index: 21;
         @apply bg-secondary;
       }
@@ -71,7 +71,7 @@
 
       td:nth-of-type(1) {
         position: sticky;
-        left: -1px;
+        left: 0;
         z-index: 20;
       }
 
